--- a/league.css
+++ b/league.css
@@ -36,7 +36,7 @@ input[type='image']:hover {
 	border-bottom: 2px solid #0C2830;
 	margin-bottom: 25px;
 }
-
+	
 #footer {
 	bottom: 0;
 	width: 100%;
@@ -68,8 +68,9 @@ input[type='submit']:hover {
 }
 
 h1 {
-	font-family: 'Raleway', sans-serif;
-	line-height: 200%;
-	color: #e5e5e5;
+	font-family: 'Amatic SC', cursive;
+	font-size: 30pt;
+	line-height: 167%;
+	color: #B2B2B2;
 	text-align: center;
 }
