--- a/create.css
+++ b/create.css
@@ -35,9 +35,11 @@ h1 {
 
 input[type='text'] {
 	text-align: center;	
-	display: block;
+	display: inline-block;
+	vertical-align: middle;
 	margin: 0 auto;
 	width: 200px;
+	margin-bottom: 25px;
 }
 
 input[type='submit'] {
@@ -53,9 +55,18 @@ input[type='submit'] {
     cursor: pointer;
     display: block;
     margin-top: 25px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+table {
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 25px;
 }
 
 textarea {
 	display: block;
 	margin: 0 auto;
+	margin-bottom: 10px;
 }
