--- a/league.css
+++ b/league.css
@@ -32,9 +32,8 @@ input[type='image']:hover {
 	height: 10%;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #000;
-	border-bottom: 2px solid #0C2830;
 	margin-bottom: 25px;
+	margin-top: 25px;
 }
 	
 #footer {
@@ -71,6 +70,6 @@ h1 {
 	font-family: 'Amatic SC', cursive;
 	font-size: 30pt;
 	line-height: 167%;
-	color: #B2B2B2;
+	color: white;
 	text-align: center;
 }
