--- a/create.css
+++ b/create.css
@@ -57,6 +57,7 @@ input[type='submit'] {
     margin-top: 25px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 50px;
 }
 
 table {
