--- a/create.css
+++ b/create.css
@@ -6,10 +6,13 @@ body {
 
 h3 {
 	font-family: 'Amatic SC', cursive;
-	line-height: 100%;
 	font-size: 20pt;
 	color: #B2B2B2;
 	text-align: center;
+	display: inline-block;
+	vertical-align: middle;
+	padding: 0;
+	margin: 10px 10px 10px 10px;
 }
 
 #header {
@@ -37,12 +40,37 @@ input[type='text'] {
 	text-align: center;	
 	display: inline-block;
 	vertical-align: middle;
-	margin: 0 auto;
+	margin: 2px auto;
 	width: 200px;
-	margin-bottom: 25px;
 }
 
-input[type='submit'] {
+td {
+	vertical-align: middle;
+	text-align: center;
+}
+
+tr {
+	line-height: 100%;
+}
+
+#update {
+	width: 250px;
+	height: 37px;
+	font-size: 12pt;
+	border-color: #f6c653 #bd6a23 #b6631f #e8ab4a;
+    background: #d79922;
+    color: #222222;
+    font-family: "Adobe Garamond Pro", Garamond, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+    padding: 6px 20px 4px 20px;
+    line-height: 100%;
+    cursor: pointer;
+    display: block;
+    margin-top: 25px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#directory {
 	width: 250px;
 	height: 37px;
 	font-size: 12pt;
@@ -60,6 +88,10 @@ input[type='submit'] {
     margin-bottom: 50px;
 }
 
+input[type='submit']:hover {
+	background: #dfad4e;
+}
+
 table {
 	margin-left: auto;
 	margin-right: auto;
@@ -67,7 +99,5 @@ table {
 }
 
 textarea {
-	display: block;
-	margin: 0 auto;
-	margin-bottom: 10px;
+	margin: 10px auto;
 }
