--- a/league.css
+++ b/league.css
@@ -73,3 +73,33 @@ h1 {
 	color: white;
 	text-align: center;
 }
+
+.tooltip {
+	outline:none; 
+}
+
+.tooltip:hover {
+	text-decoration:none;
+}
+
+.tooltip span {
+    z-index:10;
+    display:none; 
+    padding:14px 20px;
+    margin-top:120px; 
+    margin-left:-127px;
+    width:85px; 
+    line-height:16px;
+}
+
+.tooltip:hover span{
+    display:inline; 
+    position:absolute; 
+    border-radius: 2px;
+    border-style: solid; 
+	border-color: #FFFFFF #7F7F7F #CECECE #606161; 
+    text-align: center;
+    color:#D9D9D9;
+    background:#373636 url(cssttp/css-tooltip-gradient-bg.png) repeat-x 0 0;
+}
+
