--- a/result.css
+++ b/result.css
@@ -83,7 +83,43 @@ a:hover {
 	height: 1px;
 }
 
+.tooltip {
+	outline:none; 
+}
+
+.tooltip strong {
+	line-height:30px;
+}
+
+.tooltip:hover {
+	text-decoration:none;
+}
+
+.tooltip span {
+    z-index:10;
+    display:none; 
+    padding:14px 20px;
+    margin-top:75px; 
+    margin-left:-160px;
+    width:200px; 
+    line-height:16px;
+}
+
+.tooltip:hover span{
+    display:inline; 
+    position:absolute; 
+    border:2px solid white;  
+    color:#D9D9D9;
+    font-size: 10pt;
+    font-family: 'Raleway', sans-serif;
+    background:#373636 url(cssttp/css-tooltip-gradient-bg.png) repeat-x 0 0;
+}
+    
 .icon {
+	z-index: 20;
+	top: 30px;
+	border: 0;
+	left: -20px;
 	margin: 10px 10px 10px 10px;
 	border: 2px solid #373636;
 }
