--- a/league.css
+++ b/league.css
@@ -19,7 +19,10 @@ input[type='image'] {
 	margin: 7px;
 	border-style: solid;
 	border-width: 3px;
+	border-color: white;
+	/*
 	border-color: #f6c653 #bd6a23 #b6631f #e8ab4a;
+	*/
     background: #d79922;
 }
 
@@ -75,31 +78,32 @@ h1 {
 }
 
 .tooltip {
-	outline:none; 
+	outline: none; 
 }
 
 .tooltip:hover {
-	text-decoration:none;
+	text-decoration: none;
 }
 
 .tooltip span {
-    z-index:10;
-    display:none; 
-    padding:14px 20px;
-    margin-top:120px; 
-    margin-left:-127px;
-    width:85px; 
-    line-height:16px;
+    z-index: 10;
+    display: none; 
+    padding: 14px 20px;
+    margin-top: 120px; 
+    margin-left: -127px;
+    width: 85px; 
+    line-height: 16px;
 }
 
 .tooltip:hover span{
-    display:inline; 
-    position:absolute; 
+    display: inline; 
+    position: absolute; 
     border-radius: 2px;
     border-style: solid; 
 	border-color: #FFFFFF #7F7F7F #CECECE #606161; 
     text-align: center;
-    color:#D9D9D9;
-    background:#373636 url(cssttp/css-tooltip-gradient-bg.png) repeat-x 0 0;
+	font-family: 'Raleway', sans-serif;
+    color: #D9D9D9;
+    background: #373636 url(cssttp/css-tooltip-gradient-bg.png) repeat-x 0 0;
 }
 
