--- a/result.css
+++ b/result.css
@@ -6,7 +6,12 @@
 	overflow: hidden;
 	margin-left: 25px;
 	margin-top: 25px;
-	margin-bottom: 25px;
+	margin-bottom: 25px;    
+	-webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
 }
 
 a {
@@ -84,35 +89,35 @@ a:hover {
 }
 
 .tooltip {
-	outline:none; 
+	outline: none; 
 }
 
 .tooltip strong {
-	line-height:30px;
+	line-height: 30px;
 }
 
 .tooltip:hover {
-	text-decoration:none;
+	text-decoration: none;
 }
 
 .tooltip span {
-    z-index:10;
-    display:none; 
-    padding:14px 20px;
-    margin-top:75px; 
-    margin-left:-160px;
-    width:200px; 
-    line-height:16px;
+    z-index: 10;
+    display: none; 
+    padding: 14px 20px;
+    margin-top: 75px; 
+    margin-left: -160px;
+    width: 200px; 
+    line-height: 16px;
 }
 
 .tooltip:hover span{
-    display:inline; 
-    position:absolute; 
-    border:2px solid white;  
-    color:#D9D9D9;
+    display: inline; 
+    position: absolute; 
+    border: 2px solid white;  
+    color: #D9D9D9;
     font-size: 10pt;
     font-family: 'Raleway', sans-serif;
-    background:#373636 url(cssttp/css-tooltip-gradient-bg.png) repeat-x 0 0;
+    background: #373636 url(cssttp/css-tooltip-gradient-bg.png) repeat-x 0 0;
 }
     
 .icon {
@@ -148,4 +153,38 @@ a:hover {
 	width: 200px;
 	height: 125px;
 	margin-left: 22px;
+	cursor: pointer;
+}
+
+.image:hover {
+	opacity: .9;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
