--- a/result.css
+++ b/result.css
@@ -117,6 +117,14 @@ a:hover {
 	margin-left: 20px;
 }
 
+.statid {
+	color: #373636;
+	font-family: 'Raleway', sans-serif;
+	font-size: 14pt;
+	text-align: left;
+	padding-right: 20px;
+}
+
 #skills {
 	margin-left: auto;
 	margin-right: auto;
