--- a/league.css
+++ b/league.css
@@ -75,32 +75,32 @@ h1 {
 }
 
 .tooltip {
-	outline: none; 
+        outline: none;
 }
 
 .tooltip:hover {
-	text-decoration: none;
+        text-decoration: none;
 }
 
 .tooltip span {
     z-index: 10;
-    display: none; 
+    display: none;
     padding: 14px 20px;
-    margin-top: 120px; 
-    margin-left: -127px;
-    width: 85px; 
+    margin-top: 120px;
+    margin-left: -125px;
+    width: 85px;
     line-height: 16px;
 }
 
 .tooltip:hover span{
-    display: inline; 
-    position: absolute; 
-    border-radius: 2px;
-    border-style: solid; 
-	border-color: #FFFFFF #7F7F7F #CECECE #606161; 
+    display: inline;
+    position: absolute;
     text-align: center;
-	font-family: 'Raleway', sans-serif;
+        font-family: 'Raleway', sans-serif;
     color: #D9D9D9;
+    border: 2px solid #7F7F7F;
     background: #373636 url(cssttp/css-tooltip-gradient-bg.png) repeat-x 0 0;
+    opacity: .95;
 }
+
 
